--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -32,7 +32,7 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      {% if site.show_products %}
+      {% if site.show_apps %}
         <a href="http://deeg05.github.io/dhome_android" class="btn">Android app</a>
         <a href="http://deeg05.github.io/dhome_linux" class="btn">Linux app</a>
       {% endif %}
